[gd_scene load_steps=2 format=2]

[ext_resource path="res://code/perks/perk_choose.gd" type="Script" id=1]

[node name="main" type="Node2D"]
script = ExtResource( 1 )

[node name="CC" type="CenterContainer" parent="."]
margin_right = 750.0
margin_bottom = 750.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBox" type="HBoxContainer" parent="CC"]
margin_left = 97.0
margin_top = 300.0
margin_right = 652.0
margin_bottom = 450.0
rect_min_size = Vector2( 555, 150 )
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="CC/HBox"]
margin_right = 182.0
margin_bottom = 150.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LabelName" type="Label" parent="CC/HBox/VBox"]
margin_right = 182.0
margin_bottom = 36.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Test"
align = 1
valign = 1

[node name="LabelDesc" type="Label" parent="CC/HBox/VBox"]
margin_top = 40.0
margin_right = 182.0
margin_bottom = 150.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0
text = "Test"
align = 1
valign = 1
autowrap = true

[node name="VBox2" type="VBoxContainer" parent="CC/HBox"]
margin_left = 186.0
margin_right = 368.0
margin_bottom = 150.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LabelName" type="Label" parent="CC/HBox/VBox2"]
margin_right = 182.0
margin_bottom = 36.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Test"
align = 1
valign = 1

[node name="LabelDesc" type="Label" parent="CC/HBox/VBox2"]
margin_top = 40.0
margin_right = 182.0
margin_bottom = 150.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0
text = "Test"
align = 1
valign = 1
autowrap = true

[node name="VBox3" type="VBoxContainer" parent="CC/HBox"]
margin_left = 372.0
margin_right = 555.0
margin_bottom = 150.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LabelName" type="Label" parent="CC/HBox/VBox3"]
margin_right = 183.0
margin_bottom = 36.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Test"
align = 1
valign = 1

[node name="LabelDesc" type="Label" parent="CC/HBox/VBox3"]
margin_top = 40.0
margin_right = 183.0
margin_bottom = 150.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0
text = "Test"
align = 1
valign = 1
autowrap = true

[connection signal="gui_input" from="CC/HBox/VBox" to="." method="_on_VBox_gui_input"]
[connection signal="gui_input" from="CC/HBox/VBox2" to="." method="_on_VBox2_gui_input"]
[connection signal="gui_input" from="CC/HBox/VBox3" to="." method="_on_VBox3_gui_input"]
